# task-status

./: .envrc  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
ci/: taskrc
task_status/: task_status.py
tests/: test_status.py
