[tool.poetry]
name = "task-status"
version = "0.1.0"
description = "Utility to get status data built from taskwarrior"
authors = ["Alex Kelly <alex.kelly@franklin.edu>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
task-status = 'task_status.task_status:main'
